# vcs-status-daemon

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  mise.toml
.github/workflows/: ci.yml  release.yml
design/: INCREMENTAL.md
src/: client.rs  config.rs  daemon.rs  git.rs  init.rs  jj.rs  main.rs  protocol.rs  template.rs  test_util.rs  watcher.rs
src/templates/: ascii.tera  detail.tera  gitstatus.tera  minimal.tera  nerdfont.tera  ohmyzsh.tera  pure.tera  simple.tera  starship.tera  unicode.tera
