[package]
name = "vcs-status-daemon"
version = "0.0.4"
edition = "2024"
repository = "https://github.com/quodlibetor/vcs-status-daemon"
homepage = "https://github.com/quodlibetor/vcs-status-daemon"
description = "A tool that caches VCS (jj/git) status so your shell prompt can be fast"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
notify = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = { version = "1.20", default-features = false, features = ["builtins"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = [
  "rt",
  "net",
  "process",
  "time",
  "signal",
  "io-util",
  "macros",
  "sync",
  "fs",
] }
toml = "1.0.6"
ignore = "0.4.25"

[dev-dependencies]
escargot = "0.5"
tempfile = "3"
tokio = { version = "1", features = [
  "rt",
  "net",
  "process",
  "time",
  "signal",
  "io-util",
  "macros",
  "sync",
  "fs",
  "test-util",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
