[package]
name = "vcs-status-daemon"
version = "0.0.9"
edition = "2024"
repository = "https://github.com/quodlibetor/vcs-status-daemon"
homepage = "https://github.com/quodlibetor/vcs-status-daemon"
description = "A tool that caches VCS (jj/git) status so your shell prompt can be fast"

[features]
tokio-console = [
  "dep:console-subscriber",
  "tokio/tracing",
  "tokio/rt-multi-thread",
]

[dependencies]
anyhow = "1"
axoupdater = { version = "0.10", features = ["blocking"] }
bytecount = "0.6"
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "0.5", optional = true }
dirs = "6"
notify = "8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = { version = "1.20", default-features = false, features = ["builtins"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tokio = { version = "1", features = [
  "rt",
  "net",
  "process",
  "time",
  "signal",
  "io-util",
  "macros",
  "sync",
  "fs",
] }
toml = "1.0.6"
toml_edit = "0.25"
ignore = "0.4.25"
chrono = "0.4"
git2 = { version = "0.20", default-features = false }
jj-lib = { version = "0.39", features = ["git"] }
futures = "0.3"

[dev-dependencies]
escargot = "0.5"
pollster = "0.4.0"
tempfile = "3"
tokio = { version = "1", features = [
  "rt",
  "net",
  "process",
  "time",
  "signal",
  "io-util",
  "macros",
  "sync",
  "fs",
  "test-util",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# f
